added: a few sample works; canvas resizer and BG colour specific to each piece; navigation for works;

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -16,9 +16,13 @@
     #Mobile (Landscape)
     #Clearing */
 
-    .canvas {
+    .centre {
         margin-top: 100px;
         text-align: center;
+    }
+
+    .btn {
+        width: 100px;
     }
 
 
